2010-09-28  Iain Sandoe  <iains@gcc.gnu.org>

	* c-parser.c (c_parser_declaration_or_fndef): Diagnose incorrect prefix
	attributes on methods.
	 (c_parser_objc_method_definition): Handle attributes.
	(c_parser_objc_methodproto): Likewise.
	(c_parser_objc_maybe_method_attributes): New.
	(c_parser_objc_method_decl): Handle attributes, add a diagnostic for a
	missing definition, similar to that in ObjC++.

2010-09-28  Richard Henderson  <rth@redhat.com>

	* defaults.h (DWARF2_UNWIND_INFO): Don't depend on TARGET_UNWIND_INFO.
	(MUST_USE_SJLJ_EXCEPTIONS): Remove.
	(CONFIG_SJLJ_EXCEPTIONS): Remove.
	(STACK_OLD_CHECK_PROTECT): Use targetm.except_unwind_info.
	(STACK_CHECK_PROTECT): Likewise.
	* dwarf2out.c (DWARF2_UNWIND_INFO, DWARF2_FRAME_INFO): Poison.
	(dwarf2out_do_frame): Use debug_unwind_info and except_unwind_info.
	(dwarf2out_do_cfi_asm, dwarf2out_begin_prologue): Likewise.
	(dwarf2out_frame_init, dwarf2out_frame_finish): Likewise.
	(dwarf2out_assembly_start): Likewise.
	* except.c (init_eh): Use targetm.except_unwind_info.
	(finish_eh_generation, gate_convert_to_eh_region_ranges): Likewise.
	(output_one_function_exception_table): Likewise.
	* final.c: Unconditionally include dwarf2out.h.
	(final_start_function): Unconditionally call dwarf2out routines.
	(final_end_function, final_scan_insn): Likewise.
	* function.c (expand_function_end): Use targetm.except_unwind_info.
	* opts.c (decode_options): Use targetm.except_unwind_info.
	* system.h (USING_SJLJ_EXCEPTIONS, TARGET_UNWIND_INFO): Poison.
	* target.def (debug_unwind_info, except_unwind_info): New.
	* target.h (enum unwind_info_type): New.
	* targhooks.c (default_debug_unwind_info): New.
	(default_except_unwind_info): New.
	(dwarf2_except_unwind_info, sjlj_except_unwind_info): New.
	* targhooks.h: Declare them.
	* tree-tailcall.c: Include "target.h"
	(suitable_for_tail_call_opt_p): Use targetm.except_unwind_info.
	* Makefile.in (tree-tailcall.o): Update.